header overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -322,9 +322,6 @@ nav {
           margin-left: 35px;
           margin-right: 35px;
           text-align: center; } }
-      @media screen and (max-width: 26.8em) {
-        .header-content .header__left--sub {
-          margin-right: 0rem; } }
     .header-content .header__left .downloadbutton {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       margin-top: 8rem; }
@@ -344,8 +341,12 @@ nav {
           margin-left: 1rem; }
   .header-content .header__right {
     flex: 1;
-    margin-right: -7rem;
-    margin-top: -3rem; }
+    margin-top: -3rem;
+    padding-left: 8rem; }
+    @media screen and (max-width: 50em) {
+      .header-content .header__right {
+        margin-top: 2rem;
+        padding-left: 0rem; } }
     @media screen and (max-width: 37.5em) {
       .header-content .header__right {
         margin-top: 2rem; } }
@@ -362,7 +363,8 @@ nav {
       @media screen and (max-width: 26.8em) {
         .header-content .header__right--pic1 {
           margin-right: -14rem;
-          margin-left: -5rem; } }
+          margin-left: -5rem;
+          width: 26rem; } }
     .header-content .header__right--pic2 {
       width: 40rem; }
       @media screen and (max-width: 37.5em) {
@@ -478,7 +480,6 @@ footer {
       color: #ffffff;
       font-size: 1.3rem;
       line-height: 0;
-      display: -webkit-inline-box;
       display: flex;
       justify-content: space-between; }
       footer .footerEnd__Icon--1, footer .footerEnd__Icon--2, footer .footerEnd__Icon--3, footer .footerEnd__Icon--4 {
