--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -97,9 +97,21 @@ footer {
       color: $color-white;
       font-size: 1.3rem;
       line-height: 0;
-      display: -webkit-inline-box;
+      // display: -webkit-inline-box;
       display: flex;
       justify-content: space-between;
+
+      @media only screen and (max-width: $bp-large) {
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+      }
+
+      @media only screen and (max-width: $bp-small) {
+      }
+
+      @media only screen and (max-width: $bp-smaller) {
+      }
 
       &--1,
       &--2,
